--- a/app/design/frontend/base/default/template/flurrybox/cookie-policy.phtml
+++ b/app/design/frontend/base/default/template/flurrybox/cookie-policy.phtml
@@ -22,7 +22,7 @@ $_helper = Mage::helper('flurrybox_enhancedprivacy'); ?>
     </div>
     <div class="actions-toolbar">
         <div class="secondary">
-            <a class="action" href="<?php echo $this->getUrl($_helper->getInformationPage()); ?>">Click here to learn about cookies</a>
+            <a class="action" href="<?php echo $this->getUrl($_helper->getInformationPage()); ?>"><?php echo $this->__('Click here to learn about cookies'); ?></a>
         </div>
         <div class="primary">
             <button type="submit" class="button" id="enhanced-privacy-popup-agree" onclick="javascript:agreeCookiePolicy()">
