--- a/app/design/frontend/base/default/template/flurrybox/settings.phtml
+++ b/app/design/frontend/base/default/template/flurrybox/settings.phtml
@@ -1,30 +1,32 @@
-<!--
+<?php
 /**
-* This file is part of the Flurrybox EnhancedPrivacy package.
-*
-* DISCLAIMER
-*
-* Do not edit or add to this file if you wish to upgrade Flurrybox EnhancedPrivacy
-* to newer versions in the future.
-*
-* @copyright Copyright (c) 2018 Flurrybox, Ltd. (https://flurrybox.com/)
-* @license   GNU General Public License ("GPL") v3.0
-*
-* For the full copyright and license information, please view the LICENSE
-* file that was distributed with this source code.
-*/
--->
+ * This file is part of the Flurrybox EnhancedPrivacy package.
+ *
+ * DISCLAIMER
+ *
+ * Do not edit or add to this file if you wish to upgrade Flurrybox EnhancedPrivacy
+ * to newer versions in the future.
+ *
+ * @copyright Copyright (c) 2018 Flurrybox, Ltd. (https://flurrybox.com/)
+ * @license   GNU General Public License ("GPL") v3.0
+ *
+ * For the full copyright and license information, please view the LICENSE
+ * file that was distributed with this source code.
+ */
+
+$_helper = Mage::helper('flurrybox_enhancedprivacy'); ?>
 <h2><?php echo $this->__('Privacy Settings'); ?></h2>
 <div class="block block-dashboard-info">
     <div class="block-title"><strong><?php echo $this->__('Information'); ?></strong></div>
     <div class="block-content">
         <p><?php echo $this->helper->getGeneralInformation() ?></p>
+        <p><a class="action" href="<?php echo $this->getUrl($_helper->getInformationPage()); ?>"><?php echo $this->__('Click here to learn about cookies'); ?></a></p>
     </div>
 </div>
 
 <?php if($this->helper->isExportEnabled()) : ?>
 <form action="<?php echo $this->getExportUrl() ?>" method="post" id="form-validate">
-<div class="block block-dashboard-info">
+    <div class="block block-dashboard-info">
         <div class="block-title">
             <strong><?php echo $this->__('Export your personal data'); ?></strong>
         </div>
@@ -44,7 +46,7 @@
 
 <?php if ($this->helper->isDeleteEnabled()) : ?>
 <form action="<?php echo $this->getDeleteUrl() ?>" method="post" id="form-validate">
-<div class="block block-dashboard-info">
+    <div class="block block-dashboard-info">
         <div class="block-title">
             <strong><?php echo "Account deletion"; ?></strong>
         </div>
